# fastapi-clean-architecture

./: .coverage  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml  test.yaml  tests.yaml
app/: main.py
app/adapters/: __init__.py
app/dtos/: user.py
app/entities/: __init__.py  user.py
app/repositories/: __init__.py  firestore.py  memory.py
app/routers/v1/: users.py
app/use_cases/: __init__.py  users.py
tests/repositories/: test_memory.py
tests/use_cases/: test_users.py
