[tool.poetry]
name = "cloudrun-fastapi-firestore-cleancode"
version = "0.1.0"
description = ""
authors = ["Rodrigo Delduca <rodrigodelduca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"
email-validator = "^1.3.1"
google-cloud-firestore = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"
mypy = "^1.0.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.245"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
